--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <!---- Quick and Easy -->
 <section class="qe-features" id="qe-features">
 
-   <h1>Quick and easy<a href="quickeasy.html">see more...</a> 
+    <h1>Quick and easy<a href="quickeasy.html">see more...</a> </h1>
 <br>
    <div class= "box-container">
       <div class="card">
